2009-03-05  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::insertRule),
	ProjectPanel.cpp (ProjectPanel::closeEvent): fixed bug #2656815
	"Copy/paste does not work properly". Fixed Copy/Paste problem with
	policy rules and crash reported in this bug report.

2009-03-04  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (main), FirewallDialog::platformChanged(): fixed bug
	#2662290: "fwb_iosacl crash after firewall converted from
	iptables". If user changed platform setting of the firewall
	object, the program preserved its old version which was invalid
	for the new platform.

2009-03-02  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): finish
	fixes for bugs #2540389: "Routing Broken from 2.1 to 3.0.3" and
	#2356151 "Routing broken when default route has a 0
	metric". Redirect script output to a file for the time when we
	remove static routing entries and add new ones to prevent ssh
	session from stalling. Restore output back to the terminal when
	script finishes or when an error is detected. Using idea suggested
	by Heiko Helmle <helman@gmx.de>

2009-02-27  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): fixed
	bugs #2540389: "Routing Broken from 2.1 to 3.0.3" and #2356151
	"Routing broken when default route has a 0 metric". Generated
	script preserved default route when it deleted route entries
	before installing new ones. This was different in v2.1 where
	default was deleted together with other routing entries. The
	reason for this change (made some time in summer of 2008) was that
	if user did not define default route in their routing ruleset, the
	script would delete existing default without installing new one,
	leaving firewall with no default route at all.  Now the script
	deletes default if there is new one to install and preserves it
	otherwise.

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): fixed